@@ -1,1 +1,0 @@
-gcc -g vcalias.c -o vcalias -I.. -I/usr/include/mysql -L/usr/lib/mysql -L.. -lvpopmail -lmysqlclient -lcrypt -lz
